[gd_scene load_steps=2 format=3 uid="uid://bbd04urubym1q"]

[ext_resource type="Script" path="res://components/selector_items/cat_advanced.gd" id="1_d2nbl"]

[node name="CatAdvanced" type="Window"]
process_mode = 3
title = "Advanced Options"
initial_position = 2
size = Vector2i(300, 300)
script = ExtResource("1_d2nbl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Models" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
clip_text = true
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Empty"

[node name="specialClass" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Special Class"

[node name="hiddenSelection" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Exception Selections"

[node name="hiddenSelectionTexture" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Exception Textures"

[node name="Close" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="item_selected" from="VBoxContainer/Models" to="." method="_on_models_item_selected"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="_on_close_pressed"]
